force-app/main/default/objects/Incentive_Slab__c/Incentive_Slab__c.object-meta.xml
<CustomObject>
    <description>Configurable incentive slab definitions that map achievement percentage ranges to payout multipliers and values. Used by the TAM Incentive Calculation Engine to compute salesperson incentives.</description>
    <label>Incentive Slab</label>
    <nameField>
        <label>Slab Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Slabs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>