force-app/main/default/objects/Incentive_Slab__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
    <description>Description of this incentive slab tier.</description>
</CustomField>