force-app/main/default/objects/Incentive_Slab__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <label>Effective From</label>
    <type>Date</type>
    <description>Start date from which this slab is effective.</description>
</CustomField>