force-app/main/default/objects/Incentive_Slab__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <label>Effective To</label>
    <type>Date</type>
    <description>End date until which this slab is effective.</description>
</CustomField>