force-app/main/default/objects/Incentive_Slab__c/fields/Max_Percent__c.field-meta.xml
<CustomField>
    <fullName>Max_Percent__c</fullName>
    <label>Max Achievement %</label>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
    <type>Number</type>
    <defaultValue>100</defaultValue>
    <description>Maximum achievement percentage (inclusive) for this slab to apply.</description>
</CustomField>