force-app/main/default/objects/Incentive_Slab__c/fields/Min_Percent__c.field-meta.xml
<CustomField>
    <fullName>Min_Percent__c</fullName>
    <label>Min Achievement %</label>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
    <type>Number</type>
    <defaultValue>0</defaultValue>
    <description>Minimum achievement percentage (inclusive) for this slab to apply.</description>
</CustomField>