force-app/main/default/objects/Incentive_Slab__c/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <label>Multiplier</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <defaultValue>1</defaultValue>
    <description>Multiplication factor applied to the payout calculation.</description>
</CustomField>