force-app/main/default/objects/Incentive_Slab__c/fields/Payout_Type__c.field-meta.xml
<CustomField>
    <fullName>Payout_Type__c</fullName>
    <label>Payout Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
                <default>true</default>
                <label>Percentage</label>
            </value>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Salary Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <inlineHelpText>Percentage: payout = Target Value x Slab% x Multiplier. Fixed Amount: payout = Slab Value x Multiplier. Salary Percentage: payout = Employee Gross Salary x Slab% x Multiplier (salary auto-scales for quarterly/annual periods).</inlineHelpText>
    <description>Determines how the incentive payout is calculated. Salary Percentage uses the employee gross salary as the base.</description>
</CustomField>