force-app/main/default/objects/Incentive_Slab__c/fields/Payout_Value__c.field-meta.xml
<CustomField>
    <fullName>Payout_Value__c</fullName>
    <label>Payout Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
    <type>Currency</type>
    <defaultValue>0</defaultValue>
    <description>Payout amount (if Fixed) or percentage value (if Percentage type).</description>
</CustomField>