force-app/main/default/objects/Incentive_Slab__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
    <inlineHelpText>Salesforce Profile name this slab applies to (e.g., "Custom: Field Sales Rep"). Leave blank for a universal slab that applies to all profiles. The system matches: 1) Criteria + Profile + Territory, 2) Criteria + Profile, 3) Criteria only, 4) Universal.</inlineHelpText>
    <description>Profile-based slab targeting. Blank = applies to all profiles (universal fallback).</description>
</CustomField>