force-app/main/default/objects/Incentive_Slab__c/fields/Target_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Target_Criteria__c</fullName>
    <label>Target Criteria</label>
    <referenceTo>Target_Criteria__c</referenceTo>
    <relationshipLabel>Incentive Slabs</relationshipLabel>
    <relationshipName>Incentive_Slabs</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which target criteria this slab applies to. Leave blank for slabs that apply to all criteria.</description>
</CustomField>