force-app/main/default/objects/Incentive_Slab__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Incentive Slabs</relationshipLabel>
    <relationshipName>Incentive_Slabs</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Region/territory this slab applies to. Leave blank for a slab that applies to all territories. Useful when different regions have different incentive structures (e.g., Kerala vs Karnataka).</inlineHelpText>
    <description>Territory-specific slab targeting. Blank = applies to all territories.</description>
</CustomField>